# NECChange-Solver

./: LICENSE  README.md
schedule/: pyproject.toml  requirements.txt
schedule/schedule/: .gitignore  README.md  allocation.json  analytics.py  export_students_schedule.py  export_year_schedule.py  main.py  menu_analytics.py  schedule.json  schedule.py  test.py
schedule/schedule/OutputCsvUcs/: Análise_alunos.csv  Análise_turnos.csv  Autómatos_e_Linguagens_Formais_alunos.csv  Autómatos_e_Linguagens_Formais_turnos.csv  Computação_Gráfica_alunos.csv  Computação_Gráfica_turnos.csv  Cálculo_de_Programas_alunos.csv  Cálculo_de_Programas_turnos.csv  Geometria_alunos.csv  Geometria_turnos.csv  Interação_e_Concorrência_alunos.csv  Interação_e_Concorrência_turnos.csv  Laboratório_de_Algoritmia_II_alunos.csv  Laboratório_de_Algoritmia_II_turnos.csv  Laboratório_de_Algoritmia_I_alunos.csv  Laboratório_de_Algoritmia_I_turnos.csv  Matemática_Discreta_alunos.csv  Matemática_Discreta_turnos.csv  Programação_Concorrente_alunos.csv  Programação_Concorrente_turnos.csv  Programação_Imperativa_alunos.csv  Programação_Imperativa_turnos.csv  Programação_Orientada_aos_Objetos_alunos.csv  Programação_Orientada_aos_Objetos_turnos.csv  Projeto_alunos.csv  Projeto_turnos.csv  Semântica_das_Linguagens_de_Programação_alunos.csv  Semântica_das_Linguagens_de_Programação_turnos.csv  Sistemas_Operativos_alunos.csv  Sistemas_Operativos_turnos.csv  Sistemas_de_Computação_alunos.csv  Sistemas_de_Computação_turnos.csv  Teoria_de_Números_Computacional_alunos.csv  (+3 more)
schedule/tests/: test_schedule.py
(+64 files in other folders)
