[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["SimaoQuintela <simaopedroquintela@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.5.2237"
PySMT = "^0.9.5"
pandas = "^1.5.3"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
